--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,4 +26,4 @@ jobs:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CONFIG: ${{ secrets.CONFIG }}
           NAME: ${{ secrets.NAME }}
-        run: nix develop -c wrangler deploy --name "$NAME" --var CONFIG:"$CONFIG"
+        run: nix develop -c wrangler deploy --name "$NAME"
